text alignment fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,6 @@ strong {
 h4 {
   text-align: center;
   color: #a6a6a6;
-  margin: 18px;
 }
 
 h5 {
